# anymal_c_simple_description

./: CMakeLists.txt  README.md  controller_plugins.xml  package.xml
config/: anymal_control.yaml
config/rviz/: standalone.rviz
launch/: anymal.launch  control_anymal.launch  load.launch  my_world.launch  rviz.launch  standalone.launch
models/: model.gazebo.xacro  quadruped.gazebo.xacro
models/piano_inclinato/: model.config  model.sdf
models/ramp/: model.config  model.sdf
src/: floating_base_controller.cpp  floating_base_controller.h  inverse_kinematics.h  pseudo_inversion.h  set_command_FB.cpp
src/uff/: floating_base_controller.cpp  floating_base_controller.h  floating_base_controller_cristina.cpp  inverse_kinematics.h  pseudo_inversion.h  set_command_FB.cpp
src/ufficiali veri/: floating_base_controller.cpp  floating_base_controller.h  inverse_kinematics.h  set_command_FB.cpp  state_estimator.cpp
urdf/: anymal.urdf  anymal_rviz.urdf  model.urdf  model2.urdf  model3.urdf  model_vero.urdf  simple_quadruped.urdf
worlds/: empty_world.world
